-- Add jwt authentication for reset password route -- Add reset password jwt generator -- Update API documentation
